fix(component): Container item groups have a collapsed state, and container item group actions are c
affects: ak-navigation

--- a/packages/ak-navigation/src/components/less/ContainerItemGroup.less
+++ b/packages/ak-navigation/src/components/less/ContainerItemGroup.less
@@ -7,6 +7,16 @@
   margin-bottom: @ak-grid-size;
   margin-left: @ak-grid-size;
   margin-top: @ak-grid-size * 2;
+
+  [data-__ak-navigation-container-closed="true"] & {
+    margin-left: 0.5 * @ak-grid-size;
+    margin-right: 0.5 * @ak-grid-size;
+    border-top: 1px solid @ak-color-N40A;
+
+    .title, .action {
+      visibility: hidden;
+    }
+  }
 }
 
 .noHeaderContent {
